Bug 16191 - race condition in pthreadpool when forking
Summary: race condition in pthreadpool when forking
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Samba release manager
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-07-29 08:33 UTC by Volker Lendecke
Modified: 2026-08-13 14:31 UTC (History)
1 user (show)

See Also:


Attachments
Patch (1.83 KB, patch)
2026-07-31 15:55 UTC, Volker Lendecke
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2026-07-29 08:33:34 UTC
Have patch, need bugnumber
Comment 2 Samba QA Contact 2026-07-30 17:52:03 UTC
This bug was referenced in samba master:

a13764ecad804539c8cad8ec84b41ef437fab4ac
Comment 3 Volker Lendecke 2026-07-31 15:55:05 UTC
Created attachment 19145 [details]
Patch

Applies to 4.24, 4.23 and 4.22 and builds
Comment 4 Samba QA Contact 2026-08-03 19:23:20 UTC
This bug was referenced in samba v4-23-test:

5344c83efdaf3d650d1e995084bd6a610a6d48af
Comment 5 Samba QA Contact 2026-08-03 19:36:43 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.11):

5344c83efdaf3d650d1e995084bd6a610a6d48af
Comment 6 Samba QA Contact 2026-08-11 19:20:36 UTC
This bug was referenced in samba v4-24-test:

2ec6b2cf753fe8ea572b7cd03fae813e52e7b67e
Comment 7 Stefan Metzmacher 2026-08-12 14:31:40 UTC
As far as I can see 4.23 doesn't have all fixes
Comment 8 Björn Jacke 2026-08-12 14:42:13 UTC
again, don't reopen, it has just been submitted. I will reopen it, if it fails autobuild.
Comment 9 Björn Jacke 2026-08-12 14:46:11 UTC
ah, this is an "old" one, for this, 5344c83efda is the commit, which is in 4-23-stable already, no?
Comment 10 Stefan Metzmacher 2026-08-12 15:02:58 UTC
(In reply to Björn Jacke from comment #9)

Sorry, this was on the wrong bug
Comment 11 Samba QA Contact 2026-08-13 14:31:26 UTC
This bug was referenced in samba v4-24-stable (Release samba-4.24.6):

2ec6b2cf753fe8ea572b7cd03fae813e52e7b67e